Bug fix - fixed article page meta margins on mobile

--- a/themes/gv_sky/css/sass/_parts_blog/article-body.sass
+++ b/themes/gv_sky/css/sass/_parts_blog/article-body.sass
@@ -50,7 +50,6 @@
 			&.hide
 				display: none
 
-
 		&-author
 			position: relative
 			float: left
@@ -80,6 +79,9 @@
 
 			+m(736)
 				display: block
+
+			+m(520)
+				margin-bottom: 7px
 
 		&-date
 			position: relative
